--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Hire Me</string>
+    <string name="select_job_title">Select Job Title</string>
 </resources>
+
