--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,13 @@
     <string name="select_job_title">Select Job Title</string>
     <string name="select_date_filter">Select date filter</string>
     <string name="toggle_password_visibility">Toggle password visibility</string>
+    <string name="welcome">Welcome,</string>
+    <string name="hire_us_system">Hire Us System...</string>
+    <string name="find_a_job">Find a Job</string>
+    <string name="find_job">Find Job</string>
+    <string name="give_a_job">Give a Job</string>
+    <string name="give_job">Give Job</string>
+    <string name="chat_with_admin">Chat with Admin</string>
+    <string name="chat">Chat</string>
 </resources>
 
